@@ -35,6 +35,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-router-dom": "^6.22.3",
-        "react-simple-code-editor": "^0.14.1"
+        "react-simple-code-editor": "^0.14.1",
+        "yup": "^1.6.1"
     }
 }
