@@ -2,8 +2,9 @@ const path = require("path");
 const fs = require("fs");
 
 const { directories, locateInDirectories, getJsonFile } = require("../utils");
+const validateData = require("../validation");
 
-module.exports = function({ campaign }) {
+module.exports = async function({ campaign }) {
     const file = locateInDirectories(`${campaign}__CAMPAIGN.json`, directories.saves.load);
 
     if (!file) {
@@ -15,8 +16,17 @@ module.exports = function({ campaign }) {
 
     const data = getJsonFile(file);
 
-    return {
-        success: true,
-        data,
-    };
+    try {
+        const validatedData = await validateData("campaign", data);
+
+        return {
+            success: true,
+            data: validatedData,
+        };
+    } catch (err) {
+        return {
+            success: false,
+            error: err.message,
+        };
+    }
 }
