@@ -1,5 +1,10 @@
+const { validateSavedGame, validateSavedCampaign} = require('./dataValidators/saveValidatorV2.js');
+
 module.exports = {
     save: {
-        2: require('./dataValidators/saveValidatorV2.js'),
+        2: validateSavedGame,
+    },
+    campaign: {
+        2: validateSavedCampaign,
     },
 };
