@@ -2,7 +2,6 @@ For v0.8.0
 * QOL
     * Add in tooltips for actions at specific parts
 * Two full campaign missions from original game
-* Validation system for saves
 * Add portraits for all four characters (missing Sir Jacob)
 * Begin work on audio system
 * Basic menu for character stats
