@@ -79,6 +79,7 @@ v0.8.0 (unreleased)
 * Equipment assign and unassign dialog
 * Max HP and Action Points can be modified by equipment
 * Improve green square for selection of spaces
+* Validation system for saves
 
 Bug Fixes:
 * Sir Jacob is no longer stopped by chests
